--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="accept">Accept</string>
     <string name="reject">Reject</string>
     <string name="strickers_news">Strickers News</string>
+    <string name="open_chat">Open Chat</string>
 </resources>
